<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/categoriesFragment">

    <fragment
        android:id="@+id/categoriesFragment"
        android:name="com.example.iot_lab4_20220229.fragments.CategoriesFragment"
        android:label="@string/nav_categories"
        tools:layout="@layout/fragment_categories">

        <action
            android:id="@+id/action_categoriesFragment_to_mealsFragment"
            app:destination="@id/mealsFragment"
            app:popUpTo="@id/categoriesFragment"
            app:popUpToInclusive="false" />

    </fragment>

    <fragment
        android:id="@+id/mealsFragment"
        android:name="com.example.iot_lab4_20220229.fragments.MealsFragment"
        android:label="@string/nav_meals"
        tools:layout="@layout/fragment_meals">

        <argument
            android:name="categoryName"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />

        <action
            android:id="@+id/action_mealsFragment_to_recipeFragment"
            app:destination="@id/recipeFragment"
            app:popUpTo="@id/categoriesFragment"
            app:popUpToInclusive="false" />

    </fragment>

    <fragment
        android:id="@+id/recipeFragment"
        android:name="com.example.iot_lab4_20220229.fragments.RecipeFragment"
        android:label="@string/nav_recipe"
        tools:layout="@layout/fragment_recipe">

        <argument
            android:name="mealId"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />

    </fragment>

</navigation>